# bible_change

./: db.sqlite3  pyproject.toml  pytest.ini
apps/bible_change/: apps.py
apps/bible_change/bible_relay/: apps.py
apps/bible_change/bible_relay/migrations/: 0001_initial.py  0002_relay_relaycomment_delete_biblerelaycomment.py
apps/bible_change/bible_relay/models/: __init__.py  relay.py  relay_comment.py
apps/bible_change/bible_relay/serializers/auth/: relay_comment_input.py  relay_comment_output.py
apps/bible_change/bible_relay/services/: relay_comment_service.py
apps/bible_change/bible_relay/tests/: conftest.py
apps/bible_change/bible_relay/tests/services/: test_relay_comment_service.py
apps/bible_change/bible_relay/views/: __init__.py
apps/bible_change/bible_relay/views/auth/: __init__.py  relay_comment.py
apps/bible_change/users/: apps.py  urls.py
apps/bible_change/users/manager/: user_manager.py
apps/bible_change/users/migrations/: 0001_initial.py
apps/bible_change/users/models/: user.py  withdrawal.py
apps/bible_change/users/serializers/auth/: email_login.py  my_page.py  signup.py  withdrawal.py
apps/bible_change/users/tests/: test_email_login.py  test_my_page.py  test_signup.py  test_withdrawal.py
apps/bible_change/users/views/auth/: email_login.py  my_page.py  signup.py  withdrawal.py
config/: urls.py
config/settings/: base.py  local.py
