[project]
name = "bible-change-be1"
version = "3.13.3"
description = ""
authors = [
    {name = "jee1021",email = "dlawldnjs460@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
